test/corpus/statements.txt
==================
Variable declaration
==================

DIM x AS INTEGER
DIM name AS STRING

---

(source_file
  (dim_statement
    (identifier)
    (type_identifier))
  (dim_statement
    (identifier)
    (type_identifier)))

==================
Print statement
==================

PRINT "Hello World"

---

(source_file
  (print_statement
    (expression
      (string_literal))))

==================
If statement
==================

IF x > 0 THEN
    PRINT "Positive"
END IF

---

(source_file
  (if_statement
    (expression
      (binary_expression
        (identifier)
        (number_literal)))
    (print_statement
      (expression
        (string_literal)))))

==================
If-else statement
==================

IF x > 0 THEN
    PRINT "Positive"
ELSE
    PRINT "Not positive"
END IF

---

(source_file
  (if_statement
    (expression
      (binary_expression
        (identifier)
        (number_literal)))
    (print_statement
      (expression
        (string_literal)))
    (print_statement
      (expression
        (string_literal)))))
